k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: go-web-devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-devops
                port:
                  number: 80
